--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,12 @@
     }
   ],
   "action": {
-    "default_title": "Filter Baidu Trends"
+    "default_title": "Filter Baidu Trends",
+    "default_icon": "icon.png"
+  },
+  "icons": {
+    "16": "icon.png",
+    "32": "icon.png",
+    "64": "icon.png"
   }
 }
