新增过滤首页, 从首页搜索, 从地址栏搜索的热搜以及其他视觉噪音

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "manifest_version": 3,
   "content_scripts": [
     {
-      "matches": [ "https://www.baidu.com/s*" ],
+      "matches": [ "https://www.baidu.com/*" ],
       "css": [ "content-style.css" ]
     }
   ],
