样式文件名修改

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "matches": [ "https://www.baidu.com/*" ],
-      "css": [ "content-style.css" ]
+      "css": [ "style.css" ]
     }
   ],
   "action": {
