新增注入脚本

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "content_scripts": [
     {
       "matches": [ "https://www.baidu.com/*" ],
-      "css": [ "style.css" ]
+      "css": [ "./style.css" ],
+      "js": [ "./script.js" ]
     }
   ],
   "action": {
